-- ============================================================
-- 02_create_dimensions.sql
-- Dimensões do modelo estrela (schema analytics)
--
-- Todas as inserções são idempotentes (ON CONFLICT DO NOTHING),
-- para permitir reexecução segura do script/migração.
-- ============================================================

-- ----------------------------------------------------------
-- analytics.d_calendario
-- ----------------------------------------------------------
CREATE TABLE IF NOT EXISTS analytics.d_calendario (
    data_id           integer     PRIMARY KEY,
    data              date        NOT NULL UNIQUE,
    ano               integer     NOT NULL,
    semestre          integer     NOT NULL,
    trimestre         integer     NOT NULL,
    numero_mes        integer     NOT NULL,
    nome_mes          varchar(20) NOT NULL,
    nome_mes_curto    varchar(3)  NOT NULL,
    ano_mes           varchar(7)  NOT NULL,
    ano_mes_numero    integer     NOT NULL,
    dia               integer     NOT NULL,
    dia_semana_numero integer     NOT NULL,
    nome_dia_semana   varchar(20) NOT NULL,
    semana_ano        integer     NOT NULL,
    final_semana      boolean     NOT NULL,
    data_inicio_mes   date        NOT NULL,
    data_fim_mes      date        NOT NULL
);

CREATE INDEX IF NOT EXISTS ix_d_calendario_ano_mes_numero ON analytics.d_calendario (ano_mes_numero);
CREATE INDEX IF NOT EXISTS ix_d_calendario_numero_mes ON analytics.d_calendario (numero_mes);

-- Nomes de mês e dia da semana são escritos por extenso (CASE), em vez de
-- depender de to_char(..., 'TMMonth') com locale pt_BR, porque o locale do
-- servidor PostgreSQL (local ou dentro do container) nem sempre tem pt_BR
-- instalado.
INSERT INTO analytics.d_calendario (
    data_id, data, ano, semestre, trimestre, numero_mes, nome_mes, nome_mes_curto,
    ano_mes, ano_mes_numero, dia, dia_semana_numero, nome_dia_semana, semana_ano,
    final_semana, data_inicio_mes, data_fim_mes
)
SELECT
    to_char(d, 'YYYYMMDD')::integer                       AS data_id,
    d                                                      AS data,
    EXTRACT(YEAR FROM d)::integer                          AS ano,
    CASE WHEN EXTRACT(MONTH FROM d) <= 6 THEN 1 ELSE 2 END AS semestre,
    EXTRACT(QUARTER FROM d)::integer                       AS trimestre,
    EXTRACT(MONTH FROM d)::integer                         AS numero_mes,
    CASE EXTRACT(MONTH FROM d)
        WHEN 1 THEN 'Janeiro' WHEN 2 THEN 'Fevereiro' WHEN 3 THEN 'Março'
        WHEN 4 THEN 'Abril' WHEN 5 THEN 'Maio' WHEN 6 THEN 'Junho'
        WHEN 7 THEN 'Julho' WHEN 8 THEN 'Agosto' WHEN 9 THEN 'Setembro'
        WHEN 10 THEN 'Outubro' WHEN 11 THEN 'Novembro' WHEN 12 THEN 'Dezembro'
    END                                                     AS nome_mes,
    CASE EXTRACT(MONTH FROM d)
        WHEN 1 THEN 'Jan' WHEN 2 THEN 'Fev' WHEN 3 THEN 'Mar'
        WHEN 4 THEN 'Abr' WHEN 5 THEN 'Mai' WHEN 6 THEN 'Jun'
        WHEN 7 THEN 'Jul' WHEN 8 THEN 'Ago' WHEN 9 THEN 'Set'
        WHEN 10 THEN 'Out' WHEN 11 THEN 'Nov' WHEN 12 THEN 'Dez'
    END                                                     AS nome_mes_curto,
    to_char(d, 'YYYY-MM')                                  AS ano_mes,
    to_char(d, 'YYYYMM')::integer                          AS ano_mes_numero,
    EXTRACT(DAY FROM d)::integer                           AS dia,
    EXTRACT(DOW FROM d)::integer                           AS dia_semana_numero,
    CASE EXTRACT(DOW FROM d)
        WHEN 0 THEN 'Domingo' WHEN 1 THEN 'Segunda-feira' WHEN 2 THEN 'Terça-feira'
        WHEN 3 THEN 'Quarta-feira' WHEN 4 THEN 'Quinta-feira' WHEN 5 THEN 'Sexta-feira'
        WHEN 6 THEN 'Sábado'
    END                                                     AS nome_dia_semana,
    EXTRACT(WEEK FROM d)::integer                          AS semana_ano,
    EXTRACT(DOW FROM d) IN (0, 6)                          AS final_semana,
    date_trunc('month', d)::date                           AS data_inicio_mes,
    (date_trunc('month', d) + interval '1 month' - interval '1 day')::date AS data_fim_mes
FROM generate_series('2024-01-01'::date, '2035-12-31'::date, interval '1 day') AS d
ON CONFLICT (data_id) DO NOTHING;

-- ----------------------------------------------------------
-- analytics.d_modelo
--
-- modelo_id = 0 é a chave especial "Não informado". Os demais
-- modelos são descobertos dinamicamente a partir de
-- processamentos.modelo_solicitado pela função
-- analytics.refresh_modelo_analitico() (05_create_refresh_functions.sql),
-- nunca hardcoded aqui — não há como saber de antemão quais modelos
-- serão solicitados, e não se deve inventar fornecedor sem fonte confiável.
-- ----------------------------------------------------------
CREATE TABLE IF NOT EXISTS analytics.d_modelo (
    modelo_id       bigint GENERATED BY DEFAULT AS IDENTITY (START WITH 1) PRIMARY KEY,
    modelo_nome     varchar(100) NOT NULL UNIQUE,
    encoding_padrao varchar(100),
    fornecedor      varchar(100),
    ativo           boolean     NOT NULL DEFAULT true,
    criado_em       timestamptz NOT NULL DEFAULT now(),
    atualizado_em   timestamptz NOT NULL DEFAULT now()
);

INSERT INTO analytics.d_modelo (modelo_id, modelo_nome, encoding_padrao, fornecedor, ativo)
OVERRIDING SYSTEM VALUE
VALUES (0, 'Não informado', NULL, NULL, true)
ON CONFLICT (modelo_id) DO NOTHING;

-- ----------------------------------------------------------
-- analytics.d_operacao
-- ----------------------------------------------------------
CREATE TABLE IF NOT EXISTS analytics.d_operacao (
    operacao_id    smallint     PRIMARY KEY,
    operacao_codigo varchar(50) NOT NULL UNIQUE,
    operacao_nome   varchar(100) NOT NULL,
    descricao       varchar(255),
    categoria       varchar(50),
    ativo           boolean      NOT NULL DEFAULT true
);

INSERT INTO analytics.d_operacao (operacao_id, operacao_codigo, operacao_nome, descricao, categoria, ativo)
VALUES
    (0, 'nao_informado',     'Não informado',         'Operação não informada ou desconhecida',                  'Indefinido',    true),
    (1, 'analise',           'Análise de texto',       'Contagem de tokens, caracteres, palavras e bytes de um texto', 'Análise',   true),
    (2, 'divisao',           'Divisão de texto',       'Divisão de um texto em blocos por quantidade de tokens',  'Processamento', true),
    (3, 'comparacao',        'Comparação de modelos',  'Comparação da tokenização de um texto entre modelos diferentes', 'Análise', true),
    (4, 'estimativa_custo',  'Estimativa de custo',    'Estimativa de custo de tokens de entrada e de saída',     'Custos',        true)
ON CONFLICT (operacao_id) DO NOTHING;

-- ----------------------------------------------------------
-- analytics.d_origem
-- ----------------------------------------------------------
CREATE TABLE IF NOT EXISTS analytics.d_origem (
    origem_id     smallint     PRIMARY KEY,
    origem_codigo varchar(50)  NOT NULL UNIQUE,
    origem_nome   varchar(100) NOT NULL,
    descricao     varchar(255),
    ativo         boolean      NOT NULL DEFAULT true
);

INSERT INTO analytics.d_origem (origem_id, origem_codigo, origem_nome, descricao, ativo)
VALUES
    (0, 'nao_informado', 'Não informado',  'Origem não informada ou desconhecida',              true),
    (1, 'api',           'API',            'Requisição realizada via API FastAPI',              true),
    (2, 'cli',           'Terminal CLI',   'Operação realizada via menu interativo de terminal', true)
ON CONFLICT (origem_id) DO NOTHING;

-- ----------------------------------------------------------
-- analytics.d_status
-- ----------------------------------------------------------
CREATE TABLE IF NOT EXISTS analytics.d_status (
    status_id     smallint     PRIMARY KEY,
    status_codigo varchar(50)  NOT NULL UNIQUE,
    status_nome   varchar(100) NOT NULL,
    sucesso       boolean      NOT NULL,
    descricao     varchar(255)
);

INSERT INTO analytics.d_status (status_id, status_codigo, status_nome, sucesso, descricao)
VALUES
    (0, 'nao_informado', 'Não informado', false, 'Status não informado ou desconhecido'),
    (1, 'sucesso',       'Sucesso',       true,  'Processamento concluído com sucesso'),
    (2, 'erro',          'Erro',          false, 'Processamento finalizado com erro')
ON CONFLICT (status_id) DO NOTHING;
